# ai-research-assistant

./: README.md  pyproject.toml  requirements.txt
src/: chunker.py  ingestion.py  ui.py
